UPnP discovery: add support for SAT>IP servers (closes #11929, closes #15540)

Some servers don't provide a playlist of their channels, so we need to download the list for the chosen satellite from the web and process it accordingly